--- a/app/globals.css
+++ b/app/globals.css
@@ -36,3 +36,62 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.scritta1{
+  font-size: larger;
+}
+.scritta{
+  font-style: italic;
+  color: orangered;
+}
+.scritta3{
+  
+    font-style: italic;
+    width: 320px;
+    position: absolute;
+    top: 599px;
+    left: 250px;
+}
+.scritta3:hover{
+    scale: 1.2;
+  font-style: italic;
+  color: orangered;
+  width: 320px;
+
+}
+.scritta4 {
+ 
+  font-style: italic;
+  width: 320px;
+  position: absolute;
+  top: 369px;
+  left: 250px;
+}
+.scritta4:hover{
+    scale: 1.3;
+  font-style: italic;
+  color: orangered;
+  
+
+}
+
+.scritta5 {
+ 
+  font-style: italic;
+  width: 320px;
+  position: absolute;
+  top: 116px;
+  left: 250px;
+}
+.scritta5:hover{
+    scale: 1.2;
+  font-style: italic;
+  color: orangered;
+
+}
+.right{
+  position: absolute;
+  top: 100px;
+  right: 620px;
+  width: 500px;
+  height: 700px;
+}
